// Subset of HBase protobuf definitions needed for HFile reading.
// Derived from hbase-protocol/src/main/protobuf/HBase.proto and HFile.proto.

syntax = "proto2";
package hbase.pb;

option go_package = "github.com/dethi/riverbed/hfile/proto";

message BytesBytesPair {
  required bytes first = 1;
  required bytes second = 2;
}

message FileInfoProto {
  repeated BytesBytesPair map_entry = 1;
}

message FileTrailerProto {
  optional uint64 file_info_offset = 1;
  optional uint64 load_on_open_data_offset = 2;
  optional uint64 uncompressed_data_index_size = 3;
  optional uint64 total_uncompressed_bytes = 4;
  optional uint32 data_index_count = 5;
  optional uint32 meta_index_count = 6;
  optional uint64 entry_count = 7;
  optional uint32 num_data_index_levels = 8;
  optional uint64 first_data_block_offset = 9;
  optional uint64 last_data_block_offset = 10;
  optional string comparator_class_name = 11;
  optional uint32 compression_codec = 12;
  optional bytes encryption_key = 13;
}
